--- a/packaging/targets/trusty/debian/changelog
+++ b/packaging/targets/trusty/debian/changelog
@@ -1,3 +1,11 @@
+openinfoman-hwr (1.0.1~trusty) trusty; urgency=medium
+
+  * Release Version 1.0.1
+    -9c219ed initial packaging
+    --https://github.com/openhie/openinfoman-hwr/commit/9c219ed
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Mon, 16 Feb 2015 14:36:17 +0000
+
 openinfoman-hwr (1.0.0~trusty) trusty; urgency=low
 
   [Carl Leitner <litlfred@ibiblio.org>]
