--- a/packaging/targets/utopic/debian/changelog
+++ b/packaging/targets/utopic/debian/changelog
@@ -1,3 +1,11 @@
+openinfoman-hwr (1.0.1~utopic) utopic; urgency=medium
+
+  * Release Version 1.0.1
+    -9c219ed initial packaging
+    --https://github.com/openhie/openinfoman-hwr/commit/9c219ed
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Mon, 16 Feb 2015 14:36:17 +0000
+
 openinfoman-hwr (1.0.0~utopic) utopic; urgency=low
 
   [Carl Leitner <litlfred@ibiblio.org>]
