--- a/packaging/targets/utopic/debian/changelog
+++ b/packaging/targets/utopic/debian/changelog
@@ -1,3 +1,9 @@
+openinfoman-hwr (1.0.2~utopic) utopic; urgency=medium
+
+  * Release Version 1.0.2
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Mon, 16 Feb 2015 14:40:50 +0000
+
 openinfoman-hwr (1.0.1~utopic) utopic; urgency=medium
 
   * Release Version 1.0.1
