--- a/packaging/targets/trusty/debian/changelog
+++ b/packaging/targets/trusty/debian/changelog
@@ -1,3 +1,9 @@
+openinfoman-hwr (1.0.3~trusty) trusty; urgency=medium
+
+  * Release Version 1.0.3
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Mon, 16 Feb 2015 16:21:32 +0000
+
 openinfoman-hwr (1.0.2~trusty) trusty; urgency=medium
 
   * Release Version 1.0.2
