--- a/packaging/targets/utopic/debian/changelog
+++ b/packaging/targets/utopic/debian/changelog
@@ -1,3 +1,9 @@
+openinfoman-hwr (1.0.4~utopic) utopic; urgency=medium
+
+  * Release Version 1.0.4
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Mon, 16 Feb 2015 19:06:05 +0000
+
 openinfoman-hwr (1.0.3~utopic) utopic; urgency=medium
 
   * Release Version 1.0.3
