--- a/packaging/targets/utopic/debian/changelog
+++ b/packaging/targets/utopic/debian/changelog
@@ -1,3 +1,9 @@
+openinfoman-hwr (1.0.5~utopic) utopic; urgency=medium
+
+  * Release Version 1.0.5
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Wed, 18 Feb 2015 19:07:23 +0000
+
 openinfoman-hwr (1.0.4~utopic) utopic; urgency=medium
 
   * Release Version 1.0.4
