--- a/packaging/targets/utopic/debian/changelog
+++ b/packaging/targets/utopic/debian/changelog
@@ -1,3 +1,11 @@
+openinfoman-hwr (1.0.6~utopic) utopic; urgency=medium
+
+  * Release Version 1.0.6
+    -06ee6aa removed explict import random module
+    --https://github.com/openhie/openinfoman-hwr/commmit/06ee6aa
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Mon, 02 Mar 2015 14:29:50 -0500
+
 openinfoman-hwr (1.0.5~utopic) utopic; urgency=medium
 
   * Release Version 1.0.5
