--- a/packaging/targets/trusty/debian/changelog
+++ b/packaging/targets/trusty/debian/changelog
@@ -1,3 +1,9 @@
+openinfoman-hwr (1.0.7~trusty) trusty; urgency=medium
+
+  * Release Version 1.0.7
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Mon, 02 Mar 2015 14:30:07 -0500
+
 openinfoman-hwr (1.0.6~trusty) trusty; urgency=medium
 
   * Release Version 1.0.6
