--- a/packaging/targets/utopic/debian/changelog
+++ b/packaging/targets/utopic/debian/changelog
@@ -1,3 +1,9 @@
+openinfoman-hwr (1.0.8~utopic) utopic; urgency=medium
+
+  * Release Version 1.0.8
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Mon, 02 Mar 2015 14:31:44 -0500
+
 openinfoman-hwr (1.0.7~utopic) utopic; urgency=medium
 
   * Release Version 1.0.7
