--- a/packaging/targets/utopic/debian/changelog
+++ b/packaging/targets/utopic/debian/changelog
@@ -1,3 +1,9 @@
+openinfoman-hwr (1.0.10~utopic) utopic; urgency=medium
+
+  * Release Version 1.0.10
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Mon, 07 Sep 2015 01:53:07 +0000
+
 openinfoman-hwr (1.0.9~utopic) utopic; urgency=medium
 
   * Release Version 1.0.9
