--- a/packaging/targets/vivid/debian/changelog
+++ b/packaging/targets/vivid/debian/changelog
@@ -1,3 +1,11 @@
+openinfoman-hwr (1.0.12~vivid) vivid; urgency=medium
+
+  * Release Version 1.0.12
+    -3843078 reload stored functions when installing ubuntu package.  r
+    --https://github.com/openhie/openinfoman-hwr/commmit/3843078
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Sun, 25 Oct 2015 20:18:12 -0400
+
 openinfoman-hwr (1.0.11~vivid) vivid; urgency=medium
 
   * Release Version 1.0.11
