--- a/packaging/targets/trusty/debian/changelog
+++ b/packaging/targets/trusty/debian/changelog
@@ -1,3 +1,9 @@
+openinfoman-hwr (1.0.15~trusty) trusty; urgency=medium
+
+  * Release Version 1.0.15
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Mon, 18 Jan 2016 16:39:13 -0500
+
 openinfoman-hwr (1.0.14~trusty) trusty; urgency=medium
 
   * Release Version 1.0.14
