--- a/packaging/targets/trusty/debian/changelog
+++ b/packaging/targets/trusty/debian/changelog
@@ -1,3 +1,9 @@
+openinfoman-hwr (1.1.1~trusty) trusty; urgency=medium
+
+  * Release Version 1.1.1
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Sat, 05 Mar 2016 09:41:29 +0000
+
 openinfoman-hwr (1.0.17~trusty) trusty; urgency=medium
 
   * Release Version 1.0.17
