--- a/packaging/targets/trusty/debian/changelog
+++ b/packaging/targets/trusty/debian/changelog
@@ -1,3 +1,11 @@
+openinfoman-hwr (1.1.3~trusty) trusty; urgency=medium
+
+  * Release Version 1.1.3
+    -ef1d85b fixed issue in facility read
+    --http://github.com/openhie/openinfoman-hwr/commmit/ef1d85b
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Sat, 05 Mar 2016 09:44:28 +0000
+
 openinfoman-hwr (1.1.2~trusty) trusty; urgency=medium
 
   * Release Version 1.1.2
