--- a/packaging/targets/trusty/debian/changelog
+++ b/packaging/targets/trusty/debian/changelog
@@ -1,3 +1,9 @@
+openinfoman-hwr (1.1.7~trusty) trusty; urgency=medium
+
+  * Release Version 1.1.7
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Sat, 05 Mar 2016 10:55:36 +0000
+
 openinfoman-hwr (1.1.6~trusty) trusty; urgency=medium
 
   * Release Version 1.1.6
