--- a/packaging/targets/vivid/debian/changelog
+++ b/packaging/targets/vivid/debian/changelog
@@ -1,3 +1,9 @@
+openinfoman-hwr (1.2.1~vivid) vivid; urgency=medium
+
+  * Release Version 1.2.1
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Sun, 20 Mar 2016 18:37:19 +0000
+
 openinfoman-hwr (1.1.7~vivid) vivid; urgency=medium
 
   * Release Version 1.1.7
