--- a/packaging/targets/trusty/debian/changelog
+++ b/packaging/targets/trusty/debian/changelog
@@ -1,3 +1,9 @@
+openinfoman-hwr (1.2.4~trusty) trusty; urgency=medium
+
+  * Release Version 1.2.4
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Wed, 31 Aug 2016 12:09:11 +0300
+
 openinfoman-hwr (1.2.3~trusty) trusty; urgency=medium
 
   * Release Version 1.2.3
