--- a/packaging/targets/vivid/debian/changelog
+++ b/packaging/targets/vivid/debian/changelog
@@ -1,3 +1,9 @@
+openinfoman-hwr (1.2.4~vivid) vivid; urgency=medium
+
+  * Release Version 1.2.4
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Wed, 31 Aug 2016 12:09:12 +0300
+
 openinfoman-hwr (1.2.3~vivid) vivid; urgency=medium
 
   * Release Version 1.2.3
