--- a/packaging/targets/trusty/debian/changelog
+++ b/packaging/targets/trusty/debian/changelog
@@ -1,3 +1,35 @@
+openinfoman-hwr (1.2.6~trusty) trusty; urgency=medium
+
+  * Release Version 1.2.6
+    -aa4a8de adding compat file for packaging
+    --https://github.com/openhie/openinfoman-hwr/commmit/aa4a8de
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Fri, 13 Apr 2018 07:00:14 +0000
+
+openinfoman-hwr (1.2.6~trusty) trusty; urgency=medium
+
+  * Release Version 1.2.6
+    -aa4a8de adding compat file for packaging
+    --https://github.com/openhie/openinfoman-hwr/commmit/aa4a8de
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Fri, 13 Apr 2018 07:00:00 +0000
+
+openinfoman-hwr (1.2.6~trusty) trusty; urgency=medium
+
+  * Release Version 1.2.6
+    -aa4a8de adding compat file for packaging
+    --https://github.com/openhie/openinfoman-hwr/commmit/aa4a8de
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Fri, 13 Apr 2018 06:58:00 +0000
+
+openinfoman-hwr (1.2.6~trusty) trusty; urgency=medium
+
+  * Release Version 1.2.6
+    -aa4a8de adding compat file for packaging
+    --https://github.com/openhie/openinfoman-hwr/commmit/aa4a8de
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Fri, 13 Apr 2018 06:57:10 +0000
+
 openinfoman-hwr (1.2.5~trusty) trusty; urgency=medium
 
   * Release Version 1.2.5
