--- a/packaging/targets/vivid/debian/changelog
+++ b/packaging/targets/vivid/debian/changelog
@@ -1,3 +1,11 @@
+openinfoman-hwr (1.2.9~vivid) vivid; urgency=medium
+
+  * Release Version 1.2.9
+    -c0d4248 packaging for ubuntu 18.04
+    --https://github.com/openhie/openinfoman-hwr/commmit/c0d4248
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Sun, 15 Apr 2018 07:40:24 +0000
+
 openinfoman-hwr (1.2.8~vivid) vivid; urgency=medium
 
   * Release Version 1.2.8
