--- a/packaging/targets/bionic/debian/changelog
+++ b/packaging/targets/bionic/debian/changelog
@@ -1,3 +1,11 @@
+openinfoman-hwr (1.2.10~bionic) bionic; urgency=medium
+
+  * Release Version 1.2.10
+    -5396565 SF missing extension
+    --https://github.com/openhie/openinfoman-hwr/commmit/5396565
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Wed, 18 Apr 2018 06:43:57 +0000
+
 openinfoman-hwr (1.2.9~bionic) bionic; urgency=medium
 
   * Release Version 1.2.9
