--- a/packaging/targets/vivid/debian/changelog
+++ b/packaging/targets/vivid/debian/changelog
@@ -1,3 +1,11 @@
+openinfoman-hwr (1.2.10~vivid) vivid; urgency=medium
+
+  * Release Version 1.2.10
+    -5396565 SF missing extension
+    --https://github.com/openhie/openinfoman-hwr/commmit/5396565
+
+ -- Carl Leitner <litlfred@ibiblio.org>  Wed, 18 Apr 2018 06:44:01 +0000
+
 openinfoman-hwr (1.2.9~vivid) vivid; urgency=medium
 
   * Release Version 1.2.9
